# clive

./: .gitignore  README.md  build.sh  go.mod  go.sum
clive-cpp/: CMakeLists.txt  README.md  build.sh
clive-cpp/src/: main.cpp  signaling_client.cpp  signaling_client.hpp
cmd/cli/: main.go
cmd/controller/: main.go
cmd/signaling/: signaling.go
